# flang

./: Cargo.toml  flang.pest  input.fl  rustfmt.toml
env/: main.fl  manifest.json
env/src/: main.fl  math.fl
lang/: Cargo.toml  build.rs
lang/src/: lib.rs  macros.rs  main.rs  repl.rs
lang/src/errors/: mod.rs
lang/src/pest/: expr.rs
lang/src/project/: mod.rs  source.rs
lang/src/runtime/: mod.rs  scope.rs
lang/src/runtime/_builtins/: functions.rs  mod.rs  objects.rs  traits.rs
lang/src/runtime/types/: function.rs  mod.rs  structs.rs
lang/src/sitter/: expr.rs  mod.rs
src/: lib.rs  macros.rs  main.rs
src/errors/: mod.rs
src/parser/: expr.rs  flat.rs  macros.rs  mod.rs  op.rs
src/project/: mod.rs  source.rs
src/runtime/: expr.rs  mod.rs  scope.rs  traits.rs
src/runtime/_builtins/: functions.rs  traits.rs
src/runtime/types/: function.rs  mod.rs  structs.rs
test/: manifest.json
test/src/: main.fl
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/src/: grammar.json  node-types.json  parser.c  program.clj
vscode-ext/: package-lock.json  package.json
vscode-ext/src/: extension.ts
vscode-ext/syntaxes/: flang.tmLanguage.json
