[package]
name = "flang"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
enum-as-inner = "0.6.1"
itertools = "0.13.0"
miette = { version = "7.4.0", features = ["fancy"] }
owo-colors = "4.1.0"
pest = "2.7.14"
pest_derive = "2.7.14"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
spinoff = "0.8.0"
tree-sitter = "0.24.6"
tree-sitter-language = "0.1.3"
rustyline = { version = "14.0.0", features = ["derive"] }
clap = { version = "4.5.27", features = ["derive"] }

[build-dependencies]
cc="*"

[[bin]]
name = "flang"
